[package]
name = "rgbd"
version = "0.2.0"
edition = "2021"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Unofficial Rust client for GBD Benchmark Database"
documentation = "https://docs.rs/rgbd"
repository = "https://github.com/termoshtt/rgbd"
readme = "README.md"

[dependencies]
anyhow = "1.0.82"
directories = "5.0.1"
log = "0.4.21"
rusqlite = { version = "0.31.0", features = ["bundled"] }
ureq = "2.9.7"
url = "2.5.0"
xz2 = "0.1.7"
